# b-em

./: .gitignore  CMakeLists.txt  README.md  pico_extras_import.cmake
cmake/: FindAllegro.cmake
src/: 6502.c  6502.h  6502debug.c  6502debug.h  6502tube.c  6502tube.h  65816.c  65816.h  6809tube.c  acia.c  acia.h  adc.c  adc.h  arm.c  arm.h  b-em.h  bbctext.h  cmos.c  compact_joystick.c  compactcmos.c  compat_wrappers.c  config.c  config.h  cpu_debug.h  csw.c  ddnoise.c  ddnoise.h  debugger.c  debugger.h  disc.c  disc.h  fdi.c  fdi2raw.c  gui-allegro.c  gui-allegro.h  i8271.c  ide.c  ide.h  joystick.c  keyboard.c  (+55 more)
src/mc6809nc/: mc6809.h  mc6809_debug.c  mc6809_debug.h  mc6809nc.c
src/pico/: CMakeLists.txt  FindEmbedTool.cmake  TECHNICAL.md  keycodes.h  memmap_b-em.ld
src/pico/audio/: audio.c  ddnoise_samples.h  ddnoise_samples8.h
src/pico/boards/: tiny_vga_i2s.h
src/pico/discs/: beeb_discs.txt  discs.h  master_discs.txt
src/pico/embed_tool/: CMakeLists.txt  main.cpp
src/pico/gen_tables/: CMakeLists.txt  gen_tables.cpp
src/pico/linux/: keycode_to_allegro.cpp
src/pico/roms/: beeb_roms.txt  cmos.bin.inc  master_roms.txt  roms.h
src/pico/sector_read/: CMakeLists.txt  sector_read.c  sector_read.h  xip_stream.c  xip_stream.h
src/pico/stub_allegro5/: al_stub.cpp
src/pico/stub_allegro5/include/allegro5/: allegro.h  allegro_acodec.h  allegro_audio.h  allegro_image.h  allegro_native_dialog.h  allegro_primitives.h  config.h  file.h  joystick.h  keyboard.h  timer.h
src/pico/tsqueue/: tsqueue.h
src/pico/usb_host_hid/: CMakeLists.txt  keyboard_helper.h  tusb_config.h  usb_host_hid.c  usb_host_hid.h
src/pico/video/: display.c  display.h  display_tables.h  font.h  gui_stub.c  keycode_to_allegro.h  macros.S  menu.c  menu.h  menu.pio  pixels.S  video.c
src/pico/x_gui/: CMakeLists.txt  README.md  egl_texture.h  font.cpp  font.h  font_data.c  font_data.h  png_convert.c  shader.h  texture_basic.cpp  texture_drm_prime.cpp  x_gui.cpp  x_gui.h
src/pico/x_gui/cmake/: FindLibdrm.cmake  FindX11_XCB.cmake  FindXCB_DRI3.cmake
src/pico/x_gui/pico/: multicore.h
src/thumb_cpu/: CMakeLists.txt  README.md
src/thumb_cpu/src/: adapter.c  common.h  cpu_mem.c  cpu_mem.h  hw_event_queue.h  list.h
src/thumb_cpu/src/cpu/: cpu.c  cpu.h  cpu_asm.S
